Start dotnetcore with electron

--- a/package.json
+++ b/package.json
@@ -44,6 +44,13 @@
     "extends": null,
     "directories": {
       "buildResources": "public"
+    },
+    "extraResources": {
+      "from": "api/bin/dist/",
+      "to": "api/bin/dist/",
+      "filter": [
+        "**/*"
+      ]
     }
   }
 }
